--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/dist/output.css" rel="stylesheet" />
+
     <meta name="author" content="Devias IO" />
     <meta
       name="description"
